# github-actions-demo

./: .flake8  .gitignore  app.py  pyproject.toml  requirements.txt
.github/workflows/: ci-cd.yml  welcome.yml
tests/: test_app.py
