[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "github-actions-demo"
version = "0.1.0"
description = "GitHub Actions CI/CD Pipeline Demo - Flask API"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "flake8>=7.0",
    "black>=25.0",
]
